--- a/pyproject.toml
+++ b/pyproject.toml
@@ -571,7 +571,7 @@ skips = ["**/test_*.py", "tests/**", "notebooks/**"]
 [tool.black]
 line-length = 100
 target-version = ['py311']
-include = '\.pyi?
+include = '\.pyi?$'
   
 extend-exclude = '''
 /(
